# msc-thesis-recurrent-health-modeling

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
recurrent_health_events_prediction/configs/: comorbidity_charlson_weights.json  data_config.yaml  diseases_codes.json  model_config.yaml
recurrent_health_events_prediction/data_extraction/: DataExtractor.py  data_types.py  utils.py
recurrent_health_events_prediction/datasets/: HospReadmDataset.py
recurrent_health_events_prediction/eda/: utils.py
recurrent_health_events_prediction/model/: NextEventPredictionModel.py  RecurrentHealthEventsDL.py  RecurrentHealthEventsGP.py  RecurrentHealthEventsHMM.py  check_model.ipynb  explainers.py  model_types.py  utils.py
recurrent_health_events_prediction/model_analysis/: utils.py
recurrent_health_events_prediction/model_selection/: gmm_utils.py  hmm_utils.py
recurrent_health_events_prediction/preprocessing/: feature_extraction.py  filter_dataset.ipynb  gen_dataset_hmm.py  gen_dataset_hmm_utils.py  main.py  preprocessors.py  (+2 more)
scripts/: download_mimic_files.sh  mimic_files.txt
tests/: generate_synthetic_test_hmm_data.ipynb  test_comorbidity_mapping.ipynb  test_data_extraction.py  test_data_extractor_feature_builder.ipynb  test_feature_extractor_relapse.py  test_gen_survival_dataset_hmm.py  test_hosp_readm_dataset_class.py  test_mimic_dataset_class.ipynb  test_model_partial_inference.py  test_model_power_transform.py  test_preprocessing.py  test_preprocessing_drug_relapse.py  test_preprocessing_mimic.py
(+49 files in other folders)
