[project]
name = "recurrent-health-events-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas von Ancken Garcia"}
]
readme = "README.md"
requires-python = "3.10.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pomegranate (>=1.1.2,<2.0.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "scikit-survival (>=0.24.1,<0.25.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "shap (>=0.48.0,<0.49.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "kaleido (>=1.0.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "neptune (>=1.14.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "neptune-tensorboard (>=1.0.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

